# stackr

./: .env  Dockerfile  Dockerfile.prod  README.md  deploy.sh  docker-compose.test.yml  docker-compose.yml  fly.toml  nginx.conf  pyproject.toml  start.sh  supervisord.conf  test.sh
.github/workflows/: main.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/alembic/: env.py
frontend/: Dockerfile  Home.py  config.py  requirements.txt
frontend/pages/: 1_Inventory.py  2_Analytics.py  3_Purchases.py  4_Lots.py  analytics.py  home.py  inventory.py
frontend/utils/: navigation.py
